# social-exchange-service

./: .dockerignore  .gitignore  README.md  backend.Dockerfile  docker-compose.yml
.github/workflows/: be-build-deploy.yml  fe-build-deploy.yml
backend/: app.py  config.py  pyproject.toml
backend/database/: connection.py  model.py
frontend/: package.json  tsconfig.json  webpack.config.js
frontend/src/: index.html  index.tsx
